--- a/restaraunts/templates/create_item.html
+++ b/restaraunts/templates/create_item.html
@@ -10,7 +10,7 @@ Hello I'm the block Title
 
 {% block code %}
 
-	<form action = "{% url 'restaraunt_create' %} " method ="POST" enctype="multipart/form-data">
+	<form action = "{% url 'create_item' restaraunt_id=restaraunt_obj.id %} " method ="POST" enctype="multipart/form-data">
 		{% csrf_token %}
 		{{create_form | crispy}}
 		<input type="submit" value="Create" class="btn btn-outline-success">
