--- a/restaraunts/templates/list.html
+++ b/restaraunts/templates/list.html
@@ -1,4 +1,8 @@
+
 {% extends "base.html" %}
+
+{% load static %}
+
 
 {% block title %}
 
@@ -6,10 +10,8 @@ Hello I'm the block Title
 
 {% endblock title %}
 
-
+	
 {% block code %}
-
-
 
 <div class="jumbotron bg-dark	">
   <h1 class="text-primary">Add Your Favourite Restaraunt!</h1> 
@@ -22,12 +24,16 @@ Hello I'm the block Title
 </div>
 
 <div class="row">
-	{% for item in my_food_blog %}
-
-
+	{% for item in restaraunts %}
 
 		<div class="col-md-4">
 			<div class="card">
+
+				{% if item.logo %}
+					<img class="card-img-top" src="{{item.logo.url}}" alt="Card image cap">
+				
+				{% endif %} 
+
 			  <div class="card-body">
 			    <h2 class="card-title">{{item.name}}</h2>
 
@@ -35,7 +41,14 @@ Hello I'm the block Title
 
 			    <a href =" {% url 'restaraunt_update' restaraunt_id=item.id %} " class="btn btn-outline-primary">Update</a>
 			    <a href = " {% url 'restaraunt_delete' restaraunt_id=item.id %} " class="btn btn-outline-danger">Delete</a>
-			    
+			 
+			    <button onclick="clickme({{item.id}})"> 
+			    	<span id="star-number-{{item.id}}">{{item.favouriterestaraunt_set.count}}</span>
+			    	 <i id="star-color-{{item.id}}" class="fas fa-star {% if item in my_favourites %}text-warning{% endif %}"></i>
+
+			    	</button>
+
+
 			  </div>
 			</div>
 		</div>
@@ -43,7 +56,32 @@ Hello I'm the block Title
 
 	{% endfor %}
 
+
 </div>
+
+<script>
+	function clickme(id){
+		$.ajax({
+			type: "GET",
+			url:'/favourite_restaraunt/' +id,
+			error:function(){
+				console.log("you can't do it")
+			},
+
+			success:function(data){
+				console.log('/favourite_restaraunt/' +id);
+				$("#star-number-"+id).text(data.count);
+				if(data.action==="favourite"){
+					$("#star-color-"+id).addClass("text-warning");
+				}
+				else{
+					$("#star-color-"+id).removeClass("text-warning");
+				}
+			},
+		})
+	}
+
+</script>
 
 
 {% endblock code %}
